<resources>
    <string name="app_name">MovieStream-UI-Practice</string>
    <string name="no_image">Image is Loading</string>
    <string name="movie_start">Movistart</string>
    <string name="find_and_br">Find and browse your favorite movies anywhere and anytime</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or">or</string>
    <string name="do_you_already">Do you already have an account? Sign up now</string>
    <string name="empty_email">Please Enter Email</string>
    <string name="empty_password_error">Please Enter Password</string>
    <string name="password_length">Password length must be more than 8</string>
    <string name="wrong_email">Please Enter Valid email address</string>
    <string name="successfully_login">Successfully login</string>
    <string name="you_need_login">Sorry you cant you need to login first</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="do_you_already_login">Do you already have an account? Login now</string>
    <string name="invalid_password">Must contain at least one number and one uppercase and lowercase letter</string>
    <string name="you_forgot_password">You forgot your password? don\'t worry, please enter your recovery email address</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password?</string>
    <string name="please_enter_new_password">Please enter your new password to update the password</string>
    <string name="congrats_">Congrats!</string>
    <string name="congrats_your_password_reset">Congrats your password has been updated please continue to login</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="digit_code_">6 digit code has been sent to Antoniorenders@gmail.com</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_otp">Didn\'t receive the OTP ? \nResend</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="download">Download</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_all">see All</string>
    <string name="categories">Categories</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="most_populer">Most Popular</string>
    <string name="all">All</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="horror">Horror</string>
    <string name="enter_required_fields">Enter Required Fields</string>
    <string name="empty_password_email">Please Enter Email and Password</string>
    <string name="credential_do_not_match">Password Credential don\'t match our System </string>
    <string name="upload_image">Upload image</string>
</resources>