<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword.MovieStreamForgotPasswordLastActivity"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <ImageView
        android:id="@+id/imgForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_resetpasswordlast"
        app:layout_constraintHeight_percent="0.36"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/no_image" />

    <TextView
        android:id="@+id/tvPasswordResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgForgotPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        android:text="@string/congrats_"
        android:textColor="@color/text_color"
        style="@style/forgotPasswordTextStyle"
        android:layout_marginTop="@dimen/_20sdp" />

    <TextView
        android:id="@+id/tvSubTitleLast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordResetPassword"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        android:gravity="center_horizontal|top"
        android:layout_margin="@dimen/_20sdp"
        android:maxLines="2"
        android:text="@string/congrats_your_password_reset"
        style="@style/forgotPasswordSubTitleTextStyle"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/btnResetLogin"
        android:layout_width="0dp"
        style="@style/buttonAppearence"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        android:background="@drawable/moviestream_custombutton"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitleLast"
        android:text="@string/login"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>