<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword.MovieStreamForgotPasswordActivity"
    android:background="@color/main_background">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <androidx.constraintlayout.widget.Guideline
           android:id="@+id/guidelineVerticalStart"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintGuide_percent="0.06"/>

       <androidx.constraintlayout.widget.Guideline
           android:id="@+id/guidelineVerticalEnd"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintGuide_percent="0.94" />

       <ImageView
           android:id="@+id/imgForgotPassword"
           android:layout_width="wrap_content"
           android:layout_height="0dp"
           android:src="@drawable/ic_forgotpassword"
           app:layout_constraintHeight_percent="0.36"
           android:layout_marginTop="@dimen/_50sdp"
           app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
           app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
           app:layout_constraintTop_toTopOf="parent"
           android:contentDescription="@string/no_image" />

       <TextView
           android:id="@+id/tvPasswordForgotScreen"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/imgForgotPassword"
           app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
           app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
           android:text="@string/forgot_pass"
           android:textColor="@color/text_color"
           style="@style/forgotPasswordTextStyle"
           android:layout_marginTop="@dimen/_20sdp" />

       <TextView
           android:id="@+id/tvSubTitleForgot"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/tvPasswordForgotScreen"
           app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
           app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
           android:gravity="center_horizontal|top"
           android:layout_margin="@dimen/_20sdp"
           android:maxLines="2"
           android:text="@string/you_forgot_password"
           style="@style/forgotPasswordSubTitleTextStyle"
           android:textColor="@color/text_color" />

       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/etForgotPasswordEmail"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
           app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
           app:layout_constraintTop_toBottomOf="@id/tvSubTitleForgot"
           android:hint="@string/enter_email"
           android:layout_marginTop="@dimen/_30sdp"
           style="@style/textAppearence"
           android:textColor="@color/text_color"
           android:drawablePadding="@dimen/_20sdp"
           android:inputType="textEmailAddress"
           android:textColorHint="@color/text_color"
           android:drawableStart="@drawable/ic_email"
           android:backgroundTint="@color/text_color"/>

       <Button
           android:id="@+id/btnForgotPasswordSubmit"
           android:layout_width="0dp"
           style="@style/buttonAppearence"
           android:layout_height="wrap_content"
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_marginTop="@dimen/_30sdp"
           app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
           app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
           android:background="@drawable/moviestream_custombutton"
           app:layout_constraintTop_toBottomOf="@id/etForgotPasswordEmail"
           android:text="@string/submit"
           android:textAllCaps="false"/>

   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>