<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homescreen.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/movieStreamViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/pageControlLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="@id/movieStreamViewPager"
            app:layout_constraintEnd_toEndOf="@id/movieStreamViewPager"
            app:layout_constraintBottom_toBottomOf="@id/movieStreamViewPager"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_50sdp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
            tools:listitem="@layout/item_vertical_layout"/>

        <TextView
            android:id="@+id/tvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/categories"
            android:padding="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/movieStreamViewPager"
            style="@style/homeScreenText" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCategories">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAll"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="match_parent"
                    android:text="@string/all"
                    android:clickable="true"
                    android:focusable="true"
                    style="@style/ChipText"
                    android:checked="true"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAction"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/action"
                    android:clickable="true"
                    android:focusable="true"
                    style="@style/ChipText"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipComedy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/comedy"
                    android:clickable="true"
                    android:focusable="true"
                    style="@style/ChipText"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipRomance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/romance"
                    style="@style/ChipText"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHorror"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/horror"
                    style="@style/ChipText"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>